@@ -1,3 +1,10 @@
+2009-02-21  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	* GenPod.pm (xsdoc2pod): Instead of relying on one final '=cut',
+	close every opened POD paragraph separately.  This fixes POD
+	errors that occurred when '=for position COPYRIGHT' was used.
+	Original patch by Ryan Niebur.
+
 2009-02-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	* GBookmarkFile.xs: Don't document Glib::BookmarkFile::set_added,
